@@ -13,6 +13,7 @@ Fekete Kamosh
 Jaroslav Misura
 Richard Turner
 Yann Philippe
+Kevin Purney
 OpenRemote, Inc. employees and contractors.
 
 Number of third party Open Source components are used in OpenRemote each
